# game-with-bt

./: CMakeLists.txt  README.md
src/: ball.cpp  main.cpp
src/include/: ball.h  globals.h
